--- a/pre-build/html/footer/footer-footer-fixed.html
+++ b/pre-build/html/footer/footer-footer-fixed.html
@@ -12,7 +12,7 @@
         <ul class="leftMenu">
           <li>
             <a href="main.html" title="메인으로">
-              @@include('include/logo.html')
+              <img src="../../images/common/logo.png" alt="서브 메인로고" />
               <span class="hidden">메인으로</span>
             </a>
           </li>
@@ -25,13 +25,13 @@
             <span title="Header">Header</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Header fixed">Header fixed</a>
+                <a href="../html/header/header-header-fixed.html" title="Header fixed">Header fixed</a>
               </li>
               <li>
-                <a href="#" title="Header Toggle">Header Toggle</a>
+                <a href="../html/header/hedaer-header-toggle.html" title="Header Toggle">Header Toggle</a>
               </li>
               <li>
-                <a href="#" title="scroll Header">scroll Header</a>
+                <a href="../html/header/header-header-sticky.html" title="Sticky Header">Sticky Header</a>
               </li>
             </ul>
           </li>
@@ -39,13 +39,16 @@
             <span title="GNB">GNB</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="GNB Hover">GNB Hover</a>
+                <a href="../html/gnb/gnb-hover-full-dropdown.html" title="GNB Hover Full Dropdown">GNB Hover Full
+                  Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li Hover">GNB li Hover</a>
+                <a href="../html/gnb/gnb-menu-hover-full-dropdown.html" title="GNB Menu hover Full Dropdown">GNB Menu
+                  hover Full Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li find Hover">GNB li find Hover</a>
+                <a href="../html/gnb/gnb-hoverable-dropdown.html" title="GNB Hoverable Dropdown">GNB Hoverable
+                  Dropdown</a>
               </li>
             </ul>
           </li>
@@ -53,10 +56,10 @@
             <span title="Footer">Footer</span>
             <ul class="leftSubMenu block">
               <li>
-                <a href="#" title="Footer basic">Footer basic</a>
+                <a href="../html/footer/footer-footer-basic.html" title="Footer basic">Footer basic</a>
               </li>
               <li class="active">
-                <a href="#" title="Footer fixed">Footer fixed</a>
+                <a href="../html/footer/footer-footer-fixed.html" title="Footer fixed">Footer fixed</a>
               </li>
             </ul>
           </li>
@@ -64,22 +67,28 @@
             <span title="Layout">Layout</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="layout-centerEle.html" title="Center element">Center element</a>
+                <a href="../html/layout/layout-centerEle.html" title="Center element">Center element</a>
               </li>
               <li>
-                <a href="layout-tab.html" title="Tab">Tab</a>
+                <a href="../html/layout/layout-tab.html" title="Tab">Tab</a>
               </li>
               <li>
-                <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
+                <a href="../html/layout/layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
               </li>
               <li>
-                <a href="#" title="Slide">Slide</a>
+                <a href="../html/layout/layout-leftMenu.html" title="Left menu">Left menu</a>
               </li>
               <li>
-                <a href="#" title="Flex">Flex</a>
+                <a href="../html/layout/layout-floatingMenu.html" title="Floating menu">Floating menu</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Slide">Slide</a>
               </li>
               <li>
-                <a href="#" title="Grid">Grid</a>
+                <a href="../html/layout/layout-flex.html" title="Flex">Flex</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Grid">Grid</a>
               </li>
             </ul>
           </li>
@@ -87,19 +96,19 @@
             <span title="Input">Input</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="input-inputStyle.html" title="Input">input</a>
+                <a href="../html/input/input-inputStyle.html" title="Input">input</a>
               </li>
               <li>
-                <a href="input-radioStyle.html" title="Radio">radio</a>
+                <a href="../html/input/input-radioStyle.html" title="Radio">radio</a>
               </li>
               <li>
-                <a href="input-selectStyle.html" title="Select">select</a>
+                <a href="../html/input/input-selectStyle.html" title="Select">select</a>
               </li>
               <li>
-                <a href="input-textareaStyle.html" title="textarea">textarea</a>
+                <a href="../html/input/input-textareaStyle.html" title="textarea">textarea</a>
               </li>
               <li>
-                <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
+                <a href="../html/input/input-chkboxStyle.html" title="checkbox">checkbox</a>
               </li>
             </ul>
           </li>
@@ -107,10 +116,10 @@
             <span title="Scroll element">Scroll element</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
+                <a href="../html/scrollele/scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
               </li>
               <li>
-                <a href="scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
+                <a href="../html/scrollele/scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
               </li>
             </ul>
           </li>
@@ -118,39 +127,45 @@
             <span title="Custom">Custom</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
+                <a href="../html/custom/custom-contextMenu.html" title="Context Menu">Context Menu</a>
               </li>
               <li>
-                <a href="custom-scroll.html" title="Scroll design">Scroll design</a>
+                <a href="../html/custom/custom-scroll.html" title="Scroll design">Scroll design</a>
+              </li>
+              <li>
+                <a href="../html/custom/custom-toolTip.html" title="toolTip">toolTip</a>
               </li>
             </ul>
           </li>
           <li>
-            <span title="Interaction">Interaction</span>
+            <span title="Popup">Popup</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Hover transfrom">Hover transfrom</a>
+                <a href="../html/popup/popup-popup-showhide.html" title="Popup show/hide">Popup show/hide</a>
               </li>
               <li>
-                <a href="#" title="FadeIn & FadeOut">FadeIn & FadeOut</a>
+                <a href="../html/popup/popup-toast.html" title="Toast popup">Toast popup</a>
               </li>
               <li>
-                <a href="#" title="Click popup">Click popup</a>
+                <a href="../html/popup/popup-drag.html" title="Drag popup">Drag popup</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span title="Etc">Etc</span>
+            <ul class="leftSubMenu">
+              <li>
+                <a href="#" title="Animation element">Animation element</a>
+              </li>
+              <li>
+                <a href="#" title="Text ellipsis">Text ellipsis</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Key frames">Key frames</a>
               </li>
             </ul>
           </li>
         </ul>
-      </div>
-      <div class="moreArea">
-        <button type="button" class="btnMobileMore">
-          <span class="hidden">메뉴 열기</span>
-        </button>
-      </div>
-
-      <div class="backArea">
-        <button type="button" class="btnBack">
-          <span class="hidden">뒤로가기</span>
-        </button>
       </div>
 
       @@include('include/util.html')
@@ -177,56 +192,56 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-  &lt;div id="wrap"&gt;
-      &lt;div id="footer"&gt;
-          &lt;div class="inner"&gt;
-              &lt;div class="logoArea"&gt;
-                  &lt;a href="#"&gt;
-                      &lt;img src="../" alt=""&gt;
-                  &lt;/a&gt;
-              &lt;/div&gt;
-              &lt;div class="linkContainer"&gt;
-                  &lt;div class="linkArea"&gt;
-                      &lt;ul&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link01"&gt;link01&lt;/a&gt;
-                          &lt;/li&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link02"&gt;link02&lt;/a&gt;
-                          &lt;/li&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link03"&gt;link03&lt;/a&gt;
-                          &lt;/li&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link04"&gt;link04&lt;/a&gt;
-                          &lt;/li&gt;
-                      &lt;/ul&gt;
-                  &lt;/div&gt;
-                  &lt;div class="linkArea"&gt;
-                      &lt;ul&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link05"&gt;link05&lt;/a&gt;
-                          &lt;/li&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link06"&gt;link06&lt;/a&gt;
-                          &lt;/li&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link07"&gt;link07&lt;/a&gt;
-                          &lt;/li&gt;
-                          &lt;li&gt;
-                              &lt;a href="#" title="link08"&gt;link08&lt;/a&gt;
-                          &lt;/li&gt;
-                      &lt;/ul&gt;
-                  &lt;/div&gt;
-              &lt;/div&gt;
-              &lt;div class="bottomArea"&gt;
-                  &lt;div class="inner"&gt;
-                      &lt;p class="copy"&gt;Copyright © 2021 Company. ALL RIGHTS RESERVED.&lt;/p&gt;
-                  &lt;/div&gt;
-              &lt;/div&gt;
-          &lt;/div&gt;
-      &lt;/div&gt;
-  &lt;/div&gt;
+&lt;div id="wrap"&gt;
+    &lt;div id="footer"&gt;
+        &lt;div class="inner"&gt;
+            &lt;div class="logoArea"&gt;
+                &lt;a href="#"&gt;
+                    &lt;img src="../" alt=""&gt;
+                &lt;/a&gt;
+            &lt;/div&gt;
+            &lt;div class="linkContainer"&gt;
+                &lt;div class="linkArea"&gt;
+                    &lt;ul&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link01"&gt;link01&lt;/a&gt;
+                        &lt;/li&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link02"&gt;link02&lt;/a&gt;
+                        &lt;/li&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link03"&gt;link03&lt;/a&gt;
+                        &lt;/li&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link04"&gt;link04&lt;/a&gt;
+                        &lt;/li&gt;
+                    &lt;/ul&gt;
+                &lt;/div&gt;
+                &lt;div class="linkArea"&gt;
+                    &lt;ul&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link05"&gt;link05&lt;/a&gt;
+                        &lt;/li&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link06"&gt;link06&lt;/a&gt;
+                        &lt;/li&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link07"&gt;link07&lt;/a&gt;
+                        &lt;/li&gt;
+                        &lt;li&gt;
+                            &lt;a href="#" title="link08"&gt;link08&lt;/a&gt;
+                        &lt;/li&gt;
+                    &lt;/ul&gt;
+                &lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class="bottomArea"&gt;
+                &lt;div class="inner"&gt;
+                    &lt;p class="copy"&gt;Copyright © 2021 Company. ALL RIGHTS RESERVED.&lt;/p&gt;
+                &lt;/div&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
                               </code>
                             </pre>
                 </div>
@@ -236,31 +251,31 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-scss">
-  .wrap{position: relative; width: 100%; height: 100%;}
-  #footer{position: absolute; bottom: 0; width: 100%; background-color: #292a2d;
-      >.inner{padding-top: 40px; max-width: 1200px; margin: 0 auto;
-          .logoArea{margin-bottom: 20px;
-              a{display: inline-block;}
-              img{width: 200px;}
-          }
-          .linkContainer{display: flex; padding-bottom: 40px; border-bottom: 1px solid #fff;}
-          .linkArea{flex: 0.5; margin-left: auto;
-              ul{display: flex; flex-direction: column;
-                  li{ 
-                      a{font-size: 16px; font-family: 'Noto Sans'; color: #fff;
-                          &:hover{text-decoration: underline;}
-                      }
-                      +li{margin-top: 10px;}
-                  }
-              }
-          }
-          .bottomArea{
-              >.inner{height: 58px; line-height: 58px;
-                  p.copy{font-size: 14px; color: #fff; font-family: '맑은 고딕'; text-align: center;}
-              }
-          }
-      }
-  }
+.wrap{position: relative; width: 100%; height: 100%;}
+#footer{position: absolute; bottom: 0; width: 100%; background-color: #292a2d;
+    >.inner{padding-top: 40px; max-width: 1200px; margin: 0 auto;
+        .logoArea{margin-bottom: 20px;
+            a{display: inline-block;}
+            img{width: 200px;}
+        }
+        .linkContainer{display: flex; padding-bottom: 40px; border-bottom: 1px solid #fff;}
+        .linkArea{flex: 0.5; margin-left: auto;
+            ul{display: flex; flex-direction: column;
+                li{ 
+                    a{font-size: 16px; font-family: 'Noto Sans'; color: #fff;
+                        &:hover{text-decoration: underline;}
+                    }
+                    +li{margin-top: 10px;}
+                }
+            }
+        }
+        .bottomArea{
+            >.inner{height: 58px; line-height: 58px;
+                p.copy{font-size: 14px; color: #fff; font-family: '맑은 고딕'; text-align: center;}
+            }
+        }
+    }
+}
                               </code>
                           </pre>
                 </div>
@@ -270,87 +285,87 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-css">
-  .wrap{
-      position: relative;
-      width: 100%;
-      height: 100%;
-  }
+.wrap{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
 
-  .wrap #footer {
-      position: absolute;
-      bottom: 0;
-      width: 100%;
-      background-color: #292a2d;
-  }
+.wrap #footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background-color: #292a2d;
+}
 
-  .wrap #footer > .inner {
-      padding-top: 40px;
-      max-width: 1200px;
-      margin: 0 auto;
-  }
+.wrap #footer > .inner {
+    padding-top: 40px;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
-  .wrap #footer > .inner .logoArea {
-      margin-bottom: 20px;
-  }
+.wrap #footer > .inner .logoArea {
+    margin-bottom: 20px;
+}
 
-  .wrap #footer > .inner .logoArea a {
-      display: inline-block;
-  }
+.wrap #footer > .inner .logoArea a {
+    display: inline-block;
+}
 
-  .wrap #footer > .inner .logoArea img {
-      width: 200px;
-  }
+.wrap #footer > .inner .logoArea img {
+    width: 200px;
+}
 
-  .wrap #footer > .inner .linkContainer {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      padding-bottom: 40px;
-      border-bottom: 1px solid #fff;
-  }
+.wrap #footer > .inner .linkContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    padding-bottom: 40px;
+    border-bottom: 1px solid #fff;
+}
 
-  .wrap #footer > .inner .linkArea {
-      -webkit-box-flex: 0.5;
-      -ms-flex: 0.5;
-          flex: 0.5;
-      margin-left: auto;
-  }
+.wrap #footer > .inner .linkArea {
+    -webkit-box-flex: 0.5;
+    -ms-flex: 0.5;
+        flex: 0.5;
+    margin-left: auto;
+}
 
-  .wrap #footer > .inner .linkArea ul {
-      display: -webkit-box;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  }
+.wrap #footer > .inner .linkArea ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+        flex-direction: column;
+}
 
-  .wrap #footer > .inner .linkArea ul li a {
-      font-size: 16px;
-      font-family: 'Noto Sans';
-      color: #fff;
-  }
+.wrap #footer > .inner .linkArea ul li a {
+    font-size: 16px;
+    font-family: 'Noto Sans';
+    color: #fff;
+}
 
-  .wrap #footer > .inner .linkArea ul li a:hover {
-      text-decoration: underline;
-  }
+.wrap #footer > .inner .linkArea ul li a:hover {
+    text-decoration: underline;
+}
 
-  .wrap #footer > .inner .linkArea ul li + li {
-      margin-top: 10px;
-  }
+.wrap #footer > .inner .linkArea ul li + li {
+    margin-top: 10px;
+}
 
-  .wrap #footer > .inner .bottomArea > .inner {
-      height: 58px;
-      line-height: 58px;
-  }
+.wrap #footer > .inner .bottomArea > .inner {
+    height: 58px;
+    line-height: 58px;
+}
 
-  .wrap #footer > .inner .bottomArea > .inner p.copy {
-      font-size: 14px;
-      color: #fff;
-      font-family: '맑은 고딕';
-      text-align: center;
-  }
+.wrap #footer > .inner .bottomArea > .inner p.copy {
+    font-size: 14px;
+    color: #fff;
+    font-family: '맑은 고딕';
+    text-align: center;
+}
                               </code>
                             </pre>
                 </div>
