--- a/pre-build/html/input/input-inputStyle.html
+++ b/pre-build/html/input/input-inputStyle.html
@@ -12,7 +12,7 @@
         <ul class="leftMenu">
           <li>
             <a href="main.html" title="메인으로">
-              @@include('include/logo.html')
+              <img src="../../images/common/logo.png" alt="서브 메인로고" />
               <span class="hidden">메인으로</span>
             </a>
           </li>
@@ -25,13 +25,13 @@
             <span title="Header">Header</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Header fixed">Header fixed</a>
+                <a href="../html/header/header-header-fixed.html" title="Header fixed">Header fixed</a>
               </li>
               <li>
-                <a href="#" title="Header Toggle">Header Toggle</a>
+                <a href="../html/header/hedaer-header-toggle.html" title="Header Toggle">Header Toggle</a>
               </li>
               <li>
-                <a href="#" title="scroll Header">scroll Header</a>
+                <a href="../html/header/header-header-sticky.html" title="Sticky Header">Sticky Header</a>
               </li>
             </ul>
           </li>
@@ -39,13 +39,16 @@
             <span title="GNB">GNB</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="GNB Hover">GNB Hover</a>
+                <a href="../html/gnb/gnb-hover-full-dropdown.html" title="GNB Hover Full Dropdown">GNB Hover Full
+                  Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li Hover">GNB li Hover</a>
+                <a href="../html/gnb/gnb-menu-hover-full-dropdown.html" title="GNB Menu hover Full Dropdown">GNB Menu
+                  hover Full Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li find Hover">GNB li find Hover</a>
+                <a href="../html/gnb/gnb-hoverable-dropdown.html" title="GNB Hoverable Dropdown">GNB Hoverable
+                  Dropdown</a>
               </li>
             </ul>
           </li>
@@ -53,10 +56,10 @@
             <span title="Footer">Footer</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Footer basic">Footer basic</a>
+                <a href="../html/footer/footer-footer-basic.html" title="Footer basic">Footer basic</a>
               </li>
               <li>
-                <a href="#" title="Footer fixed">Footer fixed</a>
+                <a href="../html/footer/footer-footer-fixed.html" title="Footer fixed">Footer fixed</a>
               </li>
             </ul>
           </li>
@@ -64,22 +67,28 @@
             <span title="Layout">Layout</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="layout-centerEle.html" title="Center element">Center element</a>
+                <a href="../html/layout/layout-centerEle.html" title="Center element">Center element</a>
               </li>
               <li>
-                <a href="layout-tab.html" title="Tab">Tab</a>
+                <a href="../html/layout/layout-tab.html" title="Tab">Tab</a>
               </li>
               <li>
-                <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
+                <a href="../html/layout/layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
               </li>
               <li>
-                <a href="#" title="Slide">Slide</a>
+                <a href="../html/layout/layout-leftMenu.html" title="Left menu">Left menu</a>
               </li>
               <li>
-                <a href="#" title="Flex">Flex</a>
+                <a href="../html/layout/layout-floatingMenu.html" title="Floating menu">Floating menu</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Slide">Slide</a>
               </li>
               <li>
-                <a href="#" title="Grid">Grid</a>
+                <a href="../html/layout/layout-flex.html" title="Flex">Flex</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Grid">Grid</a>
               </li>
             </ul>
           </li>
@@ -87,19 +96,19 @@
             <span title="Input">Input</span>
             <ul class="leftSubMenu block">
               <li class="active">
-                <a href="input-inputStyle.html" title="Input">input</a>
+                <a href="../html/input/input-inputStyle.html" title="Input">input</a>
               </li>
               <li>
-                <a href="input-radioStyle.html" title="Radio">radio</a>
+                <a href="../html/input/input-radioStyle.html" title="Radio">radio</a>
               </li>
               <li>
-                <a href="input-selectStyle.html" title="Select">select</a>
+                <a href="../html/input/input-selectStyle.html" title="Select">select</a>
               </li>
               <li>
-                <a href="input-textareaStyle.html" title="textarea">textarea</a>
+                <a href="../html/input/input-textareaStyle.html" title="textarea">textarea</a>
               </li>
               <li>
-                <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
+                <a href="../html/input/input-chkboxStyle.html" title="checkbox">checkbox</a>
               </li>
             </ul>
           </li>
@@ -107,10 +116,10 @@
             <span title="Scroll element">Scroll element</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
+                <a href="../html/scrollele/scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
               </li>
               <li>
-                <a href="scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
+                <a href="../html/scrollele/scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
               </li>
             </ul>
           </li>
@@ -118,38 +127,45 @@
             <span title="Custom">Custom</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
+                <a href="../html/custom/custom-contextMenu.html" title="Context Menu">Context Menu</a>
               </li>
               <li>
-                <a href="custom-scroll.html" title="Scroll design">Scroll design</a>
+                <a href="../html/custom/custom-scroll.html" title="Scroll design">Scroll design</a>
+              </li>
+              <li>
+                <a href="../html/custom/custom-toolTip.html" title="toolTip">toolTip</a>
               </li>
             </ul>
           </li>
           <li>
-            <span title="Interaction">Interaction</span>
+            <span title="Popup">Popup</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Hover transfrom">Hover transfrom</a>
+                <a href="../html/popup/popup-popup-showhide.html" title="Popup show/hide">Popup show/hide</a>
               </li>
               <li>
-                <a href="#" title="FadeIn & FadeOut">FadeIn & FadeOut</a>
+                <a href="../html/popup/popup-toast.html" title="Toast popup">Toast popup</a>
               </li>
               <li>
-                <a href="#" title="Click popup">Click popup</a>
+                <a href="../html/popup/popup-drag.html" title="Drag popup">Drag popup</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span title="Etc">Etc</span>
+            <ul class="leftSubMenu">
+              <li>
+                <a href="#" title="Animation element">Animation element</a>
+              </li>
+              <li>
+                <a href="#" title="Text ellipsis">Text ellipsis</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Key frames">Key frames</a>
               </li>
             </ul>
           </li>
         </ul>
-      </div>
-      <div class="moreArea">
-        <button type="button" class="btnMobileMore">
-          <span class="hidden">메뉴 열기</span>
-        </button>
-      </div>
-      <div class="backArea">
-        <button type="button" class="btnBack">
-          <span class="hidden">뒤로가기</span>
-        </button>
       </div>
 
       @@include('./include/util.html')
@@ -179,133 +195,133 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : text&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input01"&gt;라벨&lt;/label&gt;
-      &lt;input type="text" id="input01"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : text&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input01"&gt;라벨&lt;/label&gt;
+    &lt;input type="text" id="input01"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : date&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input02"&gt;라벨&lt;/label&gt;
-      &lt;input type="date" id="input02"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : date&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input02"&gt;라벨&lt;/label&gt;
+    &lt;input type="date" id="input02"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : url&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input03"&gt;라벨&lt;/label&gt;
-      &lt;input type="url" id="input03"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : url&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input03"&gt;라벨&lt;/label&gt;
+    &lt;input type="url" id="input03"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : time&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input04"&gt;라벨&lt;/label&gt;
-      &lt;input type="time" id="input04"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : time&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input04"&gt;라벨&lt;/label&gt;
+    &lt;input type="time" id="input04"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : week&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input05"&gt;라벨&lt;/label&gt;
-      &lt;input type="week" id="input05"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : week&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input05"&gt;라벨&lt;/label&gt;
+    &lt;input type="week" id="input05"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : tel&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input06"&gt;라벨&lt;/label&gt;
-      &lt;input type="tel" id="input06"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : tel&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input06"&gt;라벨&lt;/label&gt;
+    &lt;input type="tel" id="input06"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : email&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input07"&gt;라벨&lt;/label&gt;
-      &lt;input type="email" id="input07"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : email&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input07"&gt;라벨&lt;/label&gt;
+    &lt;input type="email" id="input07"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : password&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input08"&gt;라벨&lt;/label&gt;
-      &lt;input type="password" id="input08"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : password&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input08"&gt;라벨&lt;/label&gt;
+    &lt;input type="password" id="input08"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : datetime-local&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input09"&gt;라벨&lt;/label&gt;
-      &lt;input type="datetime-local" id="input09"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : datetime-local&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input09"&gt;라벨&lt;/label&gt;
+    &lt;input type="datetime-local" id="input09"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : month&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input10"&gt;라벨&lt;/label&gt;
-      &lt;input type="month" id="input10"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : month&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input10"&gt;라벨&lt;/label&gt;
+    &lt;input type="month" id="input10"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : number&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input11"&gt;라벨&lt;/label&gt;
-      &lt;input type="number" id="input11"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : number&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input11"&gt;라벨&lt;/label&gt;
+    &lt;input type="number" id="input11"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : search&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input12"&gt;라벨&lt;/label&gt;
-      &lt;input type="search" id="input12"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : search&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input12"&gt;라벨&lt;/label&gt;
+    &lt;input type="search" id="input12"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : hidden&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input13"&gt;라벨&lt;/label&gt;
-      &lt;input type="hidden" id="input13"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : hidden&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input13"&gt;라벨&lt;/label&gt;
+    &lt;input type="hidden" id="input13"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : image&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input14"&gt;라벨&lt;/label&gt;
-      &lt;input type="image" id="input14"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : image&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input14"&gt;라벨&lt;/label&gt;
+    &lt;input type="image" id="input14"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : color&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input15"&gt;라벨&lt;/label&gt;
-      &lt;input type="color" id="input15"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : color&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input15"&gt;라벨&lt;/label&gt;
+    &lt;input type="color" id="input15"&gt;
+&lt;/div&gt;
 
-  &lt;div class="textBox"&gt;
-      &lt;div class="titleH3"&gt;
-          &lt;h3&gt;type : button&lt;/h3&gt;
-      &lt;/div&gt;
-      &lt;label for="input16"&gt;라벨&lt;/label&gt;
-      &lt;input type="button" value="value" id="input16"&gt;
-  &lt;/div&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="titleH3"&gt;
+        &lt;h3&gt;type : button&lt;/h3&gt;
+    &lt;/div&gt;
+    &lt;label for="input16"&gt;라벨&lt;/label&gt;
+    &lt;input type="button" value="value" id="input16"&gt;
+&lt;/div&gt;
                               </code>
                             </pre>
                 </div>
@@ -315,10 +331,10 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-scss">
-  input{display:inline-block; height: 30px; border: 1px solid #ddd; padding-left: 5px; box-sizing: border-box; 
-  font-family: 'Noto Sans'; vertical-align:sub; border-radius: 4px; background-color: #fff;
-      &.full{width: 100%;}
-  }
+input{display:inline-block; height: 30px; border: 1px solid #ddd; padding-left: 5px; box-sizing: border-box; 
+font-family: 'Noto Sans'; vertical-align:sub; border-radius: 4px; background-color: #fff;
+    &.full{width: 100%;}
+}
                               </code>
                             </pre>
                 </div>
@@ -328,21 +344,21 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-css">
-  input {
-      display:inline-block;
-    height: 30px;
-    border: 1px solid #ddd;
-    padding-left: 5px;
-    box-sizing: border-box;
-    font-family: 'Noto Sans';
-      vertical-align:sub;
-    border-radius: 4px;
-    background-color: #fff;
-  }
+input {
+    display:inline-block;
+  height: 30px;
+  border: 1px solid #ddd;
+  padding-left: 5px;
+  box-sizing: border-box;
+  font-family: 'Noto Sans';
+    vertical-align:sub;
+  border-radius: 4px;
+  background-color: #fff;
+}
 
-  input.full {
-    width: 100%;
-  }
+input.full {
+  width: 100%;
+}
                               </code>
                           </pre>
                 </div>
