--- a/pre-build/html/input/input-radioStyle.html
+++ b/pre-build/html/input/input-radioStyle.html
@@ -12,7 +12,7 @@
         <ul class="leftMenu">
           <li>
             <a href="main.html" title="메인으로">
-              @@include('include/logo.html')
+              <img src="../../images/common/logo.png" alt="서브 메인로고" />
               <span class="hidden">메인으로</span>
             </a>
           </li>
@@ -25,13 +25,13 @@
             <span title="Header">Header</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Header fixed">Header fixed</a>
+                <a href="../html/header/header-header-fixed.html" title="Header fixed">Header fixed</a>
               </li>
               <li>
-                <a href="#" title="Header Toggle">Header Toggle</a>
+                <a href="../html/header/hedaer-header-toggle.html" title="Header Toggle">Header Toggle</a>
               </li>
               <li>
-                <a href="#" title="scroll Header">scroll Header</a>
+                <a href="../html/header/header-header-sticky.html" title="Sticky Header">Sticky Header</a>
               </li>
             </ul>
           </li>
@@ -39,13 +39,16 @@
             <span title="GNB">GNB</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="GNB Hover">GNB Hover</a>
+                <a href="../html/gnb/gnb-hover-full-dropdown.html" title="GNB Hover Full Dropdown">GNB Hover Full
+                  Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li Hover">GNB li Hover</a>
+                <a href="../html/gnb/gnb-menu-hover-full-dropdown.html" title="GNB Menu hover Full Dropdown">GNB Menu
+                  hover Full Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB li find Hover">GNB li find Hover</a>
+                <a href="../html/gnb/gnb-hoverable-dropdown.html" title="GNB Hoverable Dropdown">GNB Hoverable
+                  Dropdown</a>
               </li>
             </ul>
           </li>
@@ -53,10 +56,10 @@
             <span title="Footer">Footer</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Footer basic">Footer basic</a>
+                <a href="../html/footer/footer-footer-basic.html" title="Footer basic">Footer basic</a>
               </li>
               <li>
-                <a href="#" title="Footer fixed">Footer fixed</a>
+                <a href="../html/footer/footer-footer-fixed.html" title="Footer fixed">Footer fixed</a>
               </li>
             </ul>
           </li>
@@ -64,22 +67,28 @@
             <span title="Layout">Layout</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="layout-centerEle.html" title="Center element">Center element</a>
+                <a href="../html/layout/layout-centerEle.html" title="Center element">Center element</a>
               </li>
               <li>
-                <a href="layout-tab.html" title="Tab">Tab</a>
+                <a href="../html/layout/layout-tab.html" title="Tab">Tab</a>
               </li>
               <li>
-                <a href="layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
+                <a href="../html/layout/layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
               </li>
               <li>
-                <a href="#" title="Slide">Slide</a>
+                <a href="../html/layout/layout-leftMenu.html" title="Left menu">Left menu</a>
               </li>
               <li>
-                <a href="#" title="Flex">Flex</a>
+                <a href="../html/layout/layout-floatingMenu.html" title="Floating menu">Floating menu</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Slide">Slide</a>
               </li>
               <li>
-                <a href="#" title="Grid">Grid</a>
+                <a href="../html/layout/layout-flex.html" title="Flex">Flex</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Grid">Grid</a>
               </li>
             </ul>
           </li>
@@ -87,19 +96,19 @@
             <span title="Input">Input</span>
             <ul class="leftSubMenu block">
               <li>
-                <a href="input-inputStyle.html" title="Input">input</a>
+                <a href="../html/input/input-inputStyle.html" title="Input">input</a>
               </li>
               <li class="active">
-                <a href="input-radioStyle.html" title="Radio">radio</a>
+                <a href="../html/input/input-radioStyle.html" title="Radio">radio</a>
               </li>
               <li>
-                <a href="input-selectStyle.html" title="Select">select</a>
+                <a href="../html/input/input-selectStyle.html" title="Select">select</a>
               </li>
               <li>
-                <a href="input-textareaStyle.html" title="textarea">textarea</a>
+                <a href="../html/input/input-textareaStyle.html" title="textarea">textarea</a>
               </li>
               <li>
-                <a href="input-chkboxStyle.html" title="checkbox">checkbox</a>
+                <a href="../html/input/input-chkboxStyle.html" title="checkbox">checkbox</a>
               </li>
             </ul>
           </li>
@@ -107,10 +116,10 @@
             <span title="Scroll element">Scroll element</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
+                <a href="../html/scrollele/scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
               </li>
               <li>
-                <a href="scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
+                <a href="../html/scrollele/scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
               </li>
             </ul>
           </li>
@@ -118,38 +127,45 @@
             <span title="Custom">Custom</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
+                <a href="../html/custom/custom-contextMenu.html" title="Context Menu">Context Menu</a>
               </li>
               <li>
-                <a href="custom-scroll.html" title="Scroll design">Scroll design</a>
+                <a href="../html/custom/custom-scroll.html" title="Scroll design">Scroll design</a>
+              </li>
+              <li>
+                <a href="../html/custom/custom-toolTip.html" title="toolTip">toolTip</a>
               </li>
             </ul>
           </li>
           <li>
-            <span title="Interaction">Interaction</span>
+            <span title="Popup">Popup</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Hover transfrom">Hover transfrom</a>
+                <a href="../html/popup/popup-popup-showhide.html" title="Popup show/hide">Popup show/hide</a>
               </li>
               <li>
-                <a href="#" title="FadeIn & FadeOut">FadeIn & FadeOut</a>
+                <a href="../html/popup/popup-toast.html" title="Toast popup">Toast popup</a>
               </li>
               <li>
-                <a href="#" title="Click popup">Click popup</a>
+                <a href="../html/popup/popup-drag.html" title="Drag popup">Drag popup</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span title="Etc">Etc</span>
+            <ul class="leftSubMenu">
+              <li>
+                <a href="#" title="Animation element">Animation element</a>
+              </li>
+              <li>
+                <a href="#" title="Text ellipsis">Text ellipsis</a>
+              </li>
+              <li class="disabled">
+                <a href="#none" title="Key frames">Key frames</a>
               </li>
             </ul>
           </li>
         </ul>
-      </div>
-      <div class="moreArea">
-        <button type="button" class="btnMobileMore">
-          <span class="hidden">메뉴 열기</span>
-        </button>
-      </div>
-      <div class="backArea">
-        <button type="button" class="btnBack">
-          <span class="hidden">뒤로가기</span>
-        </button>
       </div>
 
       @@include('./include/util.html')
@@ -173,20 +189,20 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-html">
-  &lt;div class="radioBox"&gt;
-      &lt;div class="radio"&gt;
-          &lt;input type="radio" name="exRd01" id="rd01"&gt;
-          &lt;label for="rd01"&gt;라벨&lt;/label&gt;
-      &lt;/div&gt;
-      &lt;div class="radio"&gt;
-          &lt;input type="radio" name="exRd01" id="rd02"&gt;
-          &lt;label for="rd02"&gt;라벨&lt;/label&gt;
-      &lt;/div&gt;
-      &lt;div class="radio"&gt;
-          &lt;input type="radio" name="exRd01" id="rd03"&gt;
-          &lt;label for="rd03"&gt;라벨&lt;/label&gt;
-      &lt;/div&gt;
-  &lt;/div&gt;
+&lt;div class="radioBox"&gt;
+    &lt;div class="radio"&gt;
+        &lt;input type="radio" name="exRd01" id="rd01"&gt;
+        &lt;label for="rd01"&gt;라벨&lt;/label&gt;
+    &lt;/div&gt;
+    &lt;div class="radio"&gt;
+        &lt;input type="radio" name="exRd01" id="rd02"&gt;
+        &lt;label for="rd02"&gt;라벨&lt;/label&gt;
+    &lt;/div&gt;
+    &lt;div class="radio"&gt;
+        &lt;input type="radio" name="exRd01" id="rd03"&gt;
+        &lt;label for="rd03"&gt;라벨&lt;/label&gt;
+    &lt;/div&gt;
+&lt;/div&gt;
                           
                               </code>
                             </pre>
@@ -197,25 +213,25 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-scss">
-  .radio{display: inline-block; margin-right: 10px;margin-top: 0; cursor: pointer;
-    input[type="radio"]{display: none;}
-    &:last-child {margin-right: 0;}
-    label{position: relative; display: flex;align-items: center; font-family: "Noto Sans"; font-size: 14px; color: #141414; cursor: pointer; text-indent: 5px;
-      &:before{content: ''; display: inline-block; width: 14px; height: 14px; border: 1px solid #ddd; border-radius: 50%; background-color: #fff;}
-    }
+.radio{display: inline-block; margin-right: 10px;margin-top: 0; cursor: pointer;
+  input[type="radio"]{display: none;}
+  &:last-child {margin-right: 0;}
+  label{position: relative; display: flex;align-items: center; font-family: "Noto Sans"; font-size: 14px; color: #141414; cursor: pointer; text-indent: 5px;
+    &:before{content: ''; display: inline-block; width: 14px; height: 14px; border: 1px solid #ddd; border-radius: 50%; background-color: #fff;}
+  }
+  input[type="radio"]:checked+label{
+    &:after{content: ''; position: absolute; top: 50%; transform: translateY(-50%); left: 5px; 
+    width: 6px;height: 6px; border-radius: 50%; background-color: #266bf7;}
+  }
+  &.imgType{
     input[type="radio"]:checked+label{
-      &:after{content: ''; position: absolute; top: 50%; transform: translateY(-50%); left: 5px; 
-      width: 6px;height: 6px; border-radius: 50%; background-color: #266bf7;}
-    }
-    &.imgType{
-      input[type="radio"]:checked+label{
-        &:after{content: ''; border: 0; width: 16px; height: 16px; left: 0;
-        background-image: url("../images/ico/ico-radio-checked.svg");
-        background-repeat: no-repeat ; background-position: center; background-size: 16px 16px;
-        }
+      &:after{content: ''; border: 0; width: 16px; height: 16px; left: 0;
+      background-image: url("../images/ico/ico-radio-checked.svg");
+      background-repeat: no-repeat ; background-position: center; background-size: 16px 16px;
       }
     }
   }
+}
                               </code>
                           </pre>
                 </div>
@@ -225,65 +241,65 @@
                 <div class="highlightArea cScroll">
                   <pre>
                               <code class="language-css">
-  .radio {
-    display: inline-block;
-    margin-right: 10px;
-    margin-top: 0;
-    cursor: pointer;
-  }
+.radio {
+  display: inline-block;
+  margin-right: 10px;
+  margin-top: 0;
+  cursor: pointer;
+}
 
-  .radio input[type="radio"] {
-    display: none;
-  }
+.radio input[type="radio"] {
+  display: none;
+}
 
-  .radio:last-child {
-    margin-right: 0;
-  }
+.radio:last-child {
+  margin-right: 0;
+}
 
-  .radio label {
-    position: relative;
-    display: flex;
-    align-items: center;
-    font-family: "Noto Sans";
-    font-size: 14px;
-    color: #141414;
-    cursor: pointer;
-    text-indent: 5px;
-  }
+.radio label {
+  position: relative;
+  display: flex;
+  align-items: center;
+  font-family: "Noto Sans";
+  font-size: 14px;
+  color: #141414;
+  cursor: pointer;
+  text-indent: 5px;
+}
 
-  .radio label:before {
-    content: '';
-    display: inline-block;
-    width: 14px;
-    height: 14px;
-    border: 1px solid #ddd;
-    border-radius: 50%;
-    background-color: #fff;
-  }
+.radio label:before {
+  content: '';
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  border: 1px solid #ddd;
+  border-radius: 50%;
+  background-color: #fff;
+}
 
-  .radio input[type="radio"]:checked + label:after {
-    content: '';
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 5px;
-    width: 6px;
-    height: 6px;
-    border-radius: 50%;
-    background-color: #266bf7;
-  }
+.radio input[type="radio"]:checked + label:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 5px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #266bf7;
+}
 
-  .radio.imgType input[type="radio"]:checked + label:after {
-    content: '';
-    border: 0;
-    width: 16px;
-    height: 16px;
-    left: 0;
-    background-image: url("../images/ico/ico-radio-checked.svg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 16px 16px;
-  }
+.radio.imgType input[type="radio"]:checked + label:after {
+  content: '';
+  border: 0;
+  width: 16px;
+  height: 16px;
+  left: 0;
+  background-image: url("../images/ico/ico-radio-checked.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 16px 16px;
+}
                               </code>
                             </pre>
                 </div>
