--- a/pre-build/html/sub_first.html
+++ b/pre-build/html/sub_first.html
@@ -36,13 +36,13 @@
             <span title="Header">Header</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Header fixed">Header fixed</a>
+                <a href="../html/header/header-header-fixed.html" title="Header fixed">Header fixed</a>
               </li>
               <li>
-                <a href="#" title="Header Toggle">Header Toggle</a>
+                <a href="../html/header/hedaer-header-toggle.html" title="Header Toggle">Header Toggle</a>
               </li>
               <li>
-                <a href="#" title="Sticky Header">Sticky Header</a>
+                <a href="../html/header/header-header-sticky.html" title="Sticky Header">Sticky Header</a>
               </li>
             </ul>
           </li>
@@ -50,13 +50,16 @@
             <span title="GNB">GNB</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="GNB Hover Full Dropdown">GNB Hover Full Dropdown</a>
+                <a href="../html/gnb/gnb-hover-full-dropdown.html" title="GNB Hover Full Dropdown">GNB Hover Full
+                  Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB Menu hover Full Dropdown">GNB Menu hover Full Dropdown</a>
+                <a href="../html/gnb/gnb-menu-hover-full-dropdown.html" title="GNB Menu hover Full Dropdown">GNB Menu
+                  hover Full Dropdown</a>
               </li>
               <li>
-                <a href="#" title="GNB Hoverable Dropdown">GNB Hoverable Dropdown</a>
+                <a href="../html/gnb/gnb-hoverable-dropdown.html" title="GNB Hoverable Dropdown">GNB Hoverable
+                  Dropdown</a>
               </li>
             </ul>
           </li>
@@ -84,19 +87,19 @@
                 <a href="../html/layout/layout-bg-image.html" title="Background-image 100%">Background-image 100%</a>
               </li>
               <li>
-                <a href="#" title="Left menu">Left menu</a>
+                <a href="../html/layout/layout-leftMenu.html" title="Left menu">Left menu</a>
               </li>
               <li>
-                <a href="#" title="Floating menu">Floating menu</a>
+                <a href="../html/layout/layout-floatingMenu.html" title="Floating menu">Floating menu</a>
               </li>
               <li class="disabled">
-                <a href="#" title="Slide">Slide</a>
+                <a href="#none" title="Slide">Slide</a>
               </li>
               <li>
-                <a href="#" title="Flex">Flex</a>
+                <a href="../html/layout/layout-flex.html" title="Flex">Flex</a>
               </li>
               <li class="disabled">
-                <a href="#" title="Grid">Grid</a>
+                <a href="#none" title="Grid">Grid</a>
               </li>
             </ul>
           </li>
@@ -141,7 +144,7 @@
                 <a href="../html/custom/custom-scroll.html" title="Scroll design">Scroll design</a>
               </li>
               <li>
-                <a href="#" title="toolTip">toolTip</a>
+                <a href="../html/custom/custom-toolTip.html" title="toolTip">toolTip</a>
               </li>
             </ul>
           </li>
@@ -149,13 +152,13 @@
             <span title="Popup">Popup</span>
             <ul class="leftSubMenu">
               <li>
-                <a href="#" title="Popup show/hide">Popup show/hide</a>
+                <a href="../html/popup/popup-popup-showhide.html" title="Popup show/hide">Popup show/hide</a>
               </li>
               <li>
-                <a href="#" title="Toast popup">Toast popup</a>
+                <a href="../html/popup/popup-toast.html" title="Toast popup">Toast popup</a>
               </li>
               <li>
-                <a href="#" title="Drag popup">Drag popup</a>
+                <a href="../html/popup/popup-drag.html" title="Drag popup">Drag popup</a>
               </li>
             </ul>
           </li>
@@ -169,31 +172,14 @@
                 <a href="#" title="Text ellipsis">Text ellipsis</a>
               </li>
               <li class="disabled">
-                <a href="#" title="Key frames">Key frames</a>
+                <a href="#none" title="Key frames">Key frames</a>
               </li>
             </ul>
           </li>
         </ul>
       </div>
 
-      <div class="headArea">
-          <div class="inner">
-            <div class="moreArea">
-              <button type="button" class="btnMobileMore">
-                <span class="hidden">메뉴 열기</span>
-              </button>
-            </div>
-      
-            <div class="backArea">
-              <button type="button" class="btnBack">
-                <span class="hidden">뒤로가기</span>
-              </button>
-            </div>
-            @@include('include/util.html')
-          </div>
-      </div>
-
-      
+      @@include('include/util.html')
 
       <div class="rightArea">
         <div class="inner">
